--- a/mysite/friends/templates/friends/base.html
+++ b/mysite/friends/templates/friends/base.html
@@ -1,21 +1,30 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link type="text/css" href="{% static 'friends/css/style.css' %}" rel="stylesheet" />
     <title>ВСети</title>
 </head>
 <body>
-    <h1>ВСети</h1>
-    <div class="left_menu">
-        <ul>
-            {% for m in menu %}
-            <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
-            {% endfor %}
-        </ul>
+    <div class="d-flex flex-row">
+        <div class="d-flex flex-column">
+            <div class="p-2">
+                <h1>ВСети</h1>
+            </div>
+            <div class="d-flex flex-row">
+                <div class="d-flex flex-column">
+                    {% for m in menu %}
+                    <div class="p-2"><a href="{% url m.url_name %}">{{m.title}}</a></div>
+                    {% endfor %}
+                </div>
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
     </div>
-    {% block content %}
-    {% endblock %}
 </body>
 </html>
