--- a/mysite/friends/static/friends/css/style.css
+++ b/mysite/friends/static/friends/css/style.css
@@ -1,19 +1,3 @@
-.user-posts {
-    
-}
-
-.user-content {
-    
-}
-
-.user-page {
-    
-}
-
-.form-label-tag {
-    width: 10%;
-}
-
-.register-from {
-    
+.register-form {
+    padding-left: 10px;
 }
