--- a/mysite/friends/templates/friends/base.html
+++ b/mysite/friends/templates/friends/base.html
@@ -10,19 +10,41 @@
     <title>ВСети</title>
 </head>
 <body>
-    <div class="d-flex flex-row">
-        <div class="d-flex flex-column">
-            <div class="p-2">
-                <h1>ВСети</h1>
-            </div>
-            <div class="d-flex flex-row">
-                <div class="d-flex flex-column">
-                    {% for m in menu %}
-                    <div class="p-2"><a href="{% url m.url_name %}">{{m.title}}</a></div>
-                    {% endfor %}
+    <div class="container">
+        <div class="row">
+            <div class="col-8">
+                <div class="row">
+                    <div class="col p-2">
+                        <h1><a href="/">ВСети</a></h1>
+                    </div>
+                    <div class="col p-2">
+                        {% if request.user.is_authenticated %}
+                            <div class="row">
+                                <div class="col p-2">
+                                    <ul class="nav">
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/{{request.user.pk}}">{{request.user.username}}</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        {% endif%}
+                    </div>
                 </div>
-                {% block content %}
-                {% endblock %}
+                <div class="row">
+                    <div class="col-3">
+                        {% for m in menu %}
+                        <div class="p-2"><a href="{% url m.url_name %}">{{m.title}}</a></div>
+                        {% endfor %}
+                    </div>
+                    <div class="col">
+                        {% block content %}
+                        {% endblock %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
