--- a/mysite/friends/templates/friends/base_logout.html
+++ b/mysite/friends/templates/friends/base_logout.html
@@ -10,7 +10,16 @@
     <title>ВСети</title>
 </head>
 <body>
-{% block content %}
-{% endblock %}
+    <div class="container">
+        <div class="col-8">
+            <div class="col">
+                <h1>ВСети</h1>
+            </div>
+            <div class="col">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
+    </div>
 </body>
 </html>
