--- a/mysite/friends/templates/friends/base.html
+++ b/mysite/friends/templates/friends/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link type="text/css" href="{% static 'friends/css/style.css' %}" rel="stylesheet" />
-    <title>ВСети</title>
+    <title>Friends</title>
 </head>
 <body>
     <div class="container">
@@ -15,7 +15,7 @@
             <div class="col-8">
                 <div class="row">
                     <div class="col p-2">
-                        <h1><a href="/">ВСети</a></h1>
+                        <h1><a href="/">Friends</a></h1>
                     </div>
                     <div class="col p-2">
                         {% if request.user.is_authenticated %}
@@ -26,10 +26,19 @@
                                             <a class="nav-link" href="/{{request.user.pk}}">{{request.user.username}}</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                                            <a class="btn btn-primary btn-sm" href="{% url 'logout' %}">Logout</a>
                                         </li>
                                     </ul>
                                 </div>
+                            </div>
+                        {% else %}
+                        <div class="row">
+                            <div class="col p-2">
+                                <ul class="nav">
+                                    <li class="nav-item">
+                                        <a class="btn btn-primary btn-sm" href="{% url 'login' %}">Login</a>
+                                    </li>
+                                </ul>
                             </div>
                         {% endif%}
                     </div>
