--- a/mysite/friends/templates/friends/base_logout.html
+++ b/mysite/friends/templates/friends/base_logout.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="col-8">
             <div class="col">
-                <h1>ВСети</h1>
+                <h1><a href="/">Friends</a></h1>
             </div>
             <div class="col">
                 {% block content %}
