--- a/mysite/friends/templates/friends/user.html
+++ b/mysite/friends/templates/friends/user.html
@@ -4,13 +4,20 @@
 <div class="row">
     <div class="col-3 p-2">
         <p>{{user.username}}</p>
+        <p>Followers: {{followers}}</p>
+        {% if user.username != request.user.username and is_follow%}
+            <a class="btn btn-primary btn-sm" href="{% url 'follow' user_name=user.username%}">Subcribe</a>
+        {% endif %}
+
     </div>
-    {% for post in posts %}
     <div class="col p-2">
-        <p>{{post.title}}</p>
-        <p>{{post.time_create}}</p>
+        {% for post in posts %}
+            <div class="col">
+                <p>{{post.title}}</p>
+                <p>{{post.time_create}}</p>
+            </div>
+        {% endfor %}
     </div>
-    {% endfor %}
 </div>
 
 {% endblock %}
