--- a/mysite/friends/templates/friends/base.html
+++ b/mysite/friends/templates/friends/base.html
@@ -51,8 +51,22 @@
                     </div>
                     <div class="col">
                         {% block content %}
+                        <div class="col">
+                            <form method="post">
+                                {% csrf_token %}
+                                <div class="col p-2">
+                                    {{form.text}}
+                                </div>
+                                <div class="p-2 d-grid gap-2 d-md-flex justify-content-md-end">
+                                    <button type="submit" class="btn btn-primary">Post</button>
+                                </div>
+                            </form>
+                        </div>
                         {% for post in user_posts%}
+                        <div class="col p-1 m-1 border border-secondary rounded">
                             <p>{{post.title}}</p>
+                            <p>{{post.user}} || {{post.time_create}}</p>
+                        </div>
                         {% endfor %}
                         {% endblock %}
                     </div>
