--- a/mysite/friends/templates/friends/followers.html
+++ b/mysite/friends/templates/friends/followers.html
@@ -4,8 +4,8 @@
 <div class="d-flex flex-wrap">
     {% for follower in followers %}
         <div class="p-3">
-            <a href="{% url 'profile' id=follower.following_user.pk %}" class="text-decoration-none text-reset">
-                {{follower.following_user.username}}</a>
+            <a href="{% url 'profile' id=follower.pk %}" class="text-decoration-none text-reset">
+                {{follower.username}}</a>
         </div>
     {% endfor %}
 </div>
