--- a/mysite/friends/templates/friends/user.html
+++ b/mysite/friends/templates/friends/user.html
@@ -5,16 +5,23 @@
     <div class="col-3 p-2">
         <p>{{user.username}}</p>
         <p>Followers: {{followers}}</p>
-        {% if user.username != request.user.username and is_follow%}
-            <a class="btn btn-primary btn-sm" href="{% url 'follow' user_name=user.username%}">Subcribe</a>
+        {% if user.pk != request.user.pk %}
+            {% if user.username != request.user.username and not is_follow%}
+                <a class="btn btn-primary btn-sm" href="{% url 'follow' user_id=user.id%}">Follow</a>
+            {% else %}
+                <a class="btn btn-primary btn-sm" href="{% url 'unfollow' user_id=user.id%}">Unfollow</a>
+            {% endif %}
         {% endif %}
-
     </div>
     <div class="col p-2">
         {% for post in posts %}
-            <div class="col">
-                <p>{{post.title}}</p>
-                <p>{{post.time_create}}</p>
+            <div class="col p-1 m-1 border border-secondary rounded">
+                <p class="lh-1">{{post.title}}</p>
+                <p class="lh-1">{{post.time_create}}
+                    {% if user.pk == request.user.pk %}
+                    <a href="{% url 'delete_post' post_id=post.pk %}">X</a>
+                    {% endif %}
+                </p>
             </div>
         {% endfor %}
     </div>
