--- a/mysite/friends/static/friends/css/style.css
+++ b/mysite/friends/static/friends/css/style.css
@@ -1,3 +1,19 @@
 .register-form {
     padding-left: 10px;
 }
+
+.avatar {
+    max-width: 70px;
+}
+
+.user-link {
+    color:black;
+}
+
+.user-link:hover {
+    color:red;
+}
+
+.fa-heart {
+    margin: 0 4px 0 4px;
+}
