--- a/mysite/friends/templates/friends/base.html
+++ b/mysite/friends/templates/friends/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link type="text/css" href="{% static 'friends/css/style.css' %}" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/772d1ac053.js" crossorigin="anonymous"></script>
     <title>Friends</title>
 </head>
 <body>
@@ -38,6 +39,9 @@
                                     <li class="nav-item">
                                         <a class="btn btn-primary btn-sm" href="{% url 'login' %}">Login</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="btn btn-primary btn-sm" href="{% url 'register' %}">Registration</a>
+                                    </li>
                                 </ul>
                             </div>
                         {% endif%}
@@ -65,7 +69,22 @@
                         {% for post in user_posts%}
                         <div class="col p-1 m-1 border border-secondary rounded">
                             <p>{{post.title}}</p>
-                            <p>{{post.user}} || {{post.time_create}}</p>
+                            <div class="d-flex flex-row">
+                                <p>{{post.user}} || {{post.time_create}} ||</p>
+                                <div class="">
+                                    {% if post in user_likes%}
+                                        <a href="{% url 'unlike_post' post_id=post.pk%}">
+                                            <span style="color:red"><i class="fa-solid fa-heart"></i></span>
+                                        </a>
+                                    {% else %}
+                                        <a href="{% url 'like_post' post_id=post.pk%}">
+                                            <span style="color:black"><i class="fa-regular fa-heart"></i></span>
+                                        </a>
+                                    {% endif %}
+                                </div>
+                                <div>{{post.likes.count}}</div>
+                            </div>
+                            
                         </div>
                         {% endfor %}
                         {% endblock %}
