--- a/mysite/friends/templates/friends/news.html
+++ b/mysite/friends/templates/friends/news.html
@@ -2,10 +2,14 @@
 
 {% block content %}
     {% for n in news %}
-        <div class="border border-3 rounded m-2 p-2">
-            <p>{{ n.title }}</p>
-            {% if n.urlToImage %}
-            <img class="rounded img-fluid" src="{{ n.urlToImage }}" alt="">
+        <div class="news-box border border-3 rounded m-2 p-2">
+            <a class="text-decoration-none text-reset" href={{n.url}}>
+                <p>{{ n.title }}</p>
+                {% if n.urlToImage %}
+                <img class="rounded img-fluid" src="{{ n.urlToImage }}" alt="">
+                <p>{{ n.description }}</p>
+                <p style="margin:0px;">{{ n.publishedAt }}</p>
+            </a>
             {% endif %}
         </div>
     {% endfor %}
