--- a/mysite/friends/templates/friends/base.html
+++ b/mysite/friends/templates/friends/base.html
@@ -6,59 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Fascinate&family=Fredoka+One&family=Gruppo&family=Patrick+Hand&family=Permanent+Marker&family=Yrsa:wght@300&display=swap" rel="stylesheet">
     <link type="text/css" href="{% static 'friends/css/style.css' %}" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/772d1ac053.js" crossorigin="anonymous"></script>
     <title>Friends</title>
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-8">
+        <div class="header row">
+            <div style="background-color: inherit;" class="col p-2">
+                <h1><a class="site-title text-decoration-none" href="/">Friends</a></h1>
+            </div>
+            {% if weather %}
+            <div class="col p-2 d-flex align-items-center justify-content-center">
+                <p class="text-center fw-bold" style="margin:0px">{{weather.city}} {{weather.main.temp|floatformat}}°C</p>
+            </div>
+            {% endif %}
+            <div class="col">
+                {% if request.user.is_authenticated %}
+                    <div class="row">
+                        <div class="col p-3 d-flex justify-content-end">
+                            <ul class="nav">
+                                <li class="nav-item p-1">
+                                    <a class="btn btn-primary btn-sm" href="/{{request.user.pk}}">{{request.user.username}}</a>
+                                </li>
+                                <li class="nav-item p-1">
+                                    <a class="btn btn-primary btn-sm" href="{% url 'logout' %}">Logout</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                {% else %}
                 <div class="row">
                     <div class="col p-2">
-                        <h1><a href="/">Friends</a></h1>
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a class="btn btn-primary btn-sm" href="{% url 'login' %}">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-primary btn-sm" href="{% url 'register' %}">Registration</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="col p-2 d-flex align-items-center justify-content-center">
-                        <p class="text-center fw-bold" style="margin:0px">{{weather.city}} {{weather.main.temp|floatformat}}°C</p>
-                    </div>
-                    <div class="col">
-                        {% if request.user.is_authenticated %}
-                            <div class="row">
-                                <div class="col p-3 d-flex justify-content-end">
-                                    <ul class="nav">
-                                        <li class="nav-item p-1">
-                                            <a class="btn btn-primary btn-sm" href="/{{request.user.pk}}">{{request.user.username}}</a>
-                                        </li>
-                                        <li class="nav-item p-1">
-                                            <a class="btn btn-primary btn-sm" href="{% url 'logout' %}">Logout</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        {% else %}
-                        <div class="row">
-                            <div class="col p-2">
-                                <ul class="nav">
-                                    <li class="nav-item">
-                                        <a class="btn btn-primary btn-sm" href="{% url 'login' %}">Login</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="btn btn-primary btn-sm" href="{% url 'register' %}">Registration</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        {% endif%}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-3">
+                {% endif%}
+            </div>
+        </div>
+        <div class="main-page row">
+            <div class="col-8">
+                <div class="row" style="min-height: 700px;">
+                    <div class="left-menu col-3">
                         {% for m in menu %}
-                        <div class="p-2"><a href="{% url m.url_name %}">{{m.title}}</a></div>
+                        <div class="p-2"><a class="left-menu-button text-decoration-none" href="{% url m.url_name %}">{{m.title}}</a></div>
                         {% endfor %}
                     </div>
                     <div class="col">
                         {% block content %}
-                        <div class="col">
+                        <div class="post-form col">
                             <form method="post">
                                 {% csrf_token %}
                                 <div class="col p-2">
@@ -100,7 +103,16 @@
                     </div>
                 </div>
             </div>
+            {% if nasa %}
+            <div class="col-4">
+                <div style="max-width: 350px;">
+                    <h4 class="text-center">Astronomy Picture of the Day</h4>
+                    <img class="img-fluid rounded-3" src="{{nasa}}" alt="">
+                </div>
+            </div>
+            {% endif %}
         </div>
+        <div class="footer row"></div>
     </div>
 </body>
 </html>
