--- a/mysite/friends/templates/friends/register.html
+++ b/mysite/friends/templates/friends/register.html
@@ -1,33 +1,38 @@
 {% extends 'friends/base_logout.html'%}
 
 {% block content%}
-<div class="col">
-    <form method="post">
-        {% csrf_token %}
-        <div class="col register-form">
-            {% for field in form %}
-                <div class="col">
-                    {{ field.errors }}
-                </div>
-                <div class="row">
-                    <div class="col-2 p-1 form-label-tag">
-                        {{ field.label_tag }}
+<div class="d-flex flex-row">
+    <div class="col-8">
+        <form method="post">
+            {% csrf_token %}
+            <div class="col register-form">
+                {% for field in form %}
+                    <div class="col">
+                        {{ field.errors }}
                     </div>
-                    <div class="col p-1">
-                        {{ field }}
+                    <div class="row">
+                        <div class="col-2 p-1 form-label-tag">
+                            {{ field.label_tag }}
+                        </div>
+                        <div class="col p-1">
+                            {{ field }}
+                        </div>
                     </div>
-                </div>
-                <div class="p-1">
-                    {% if field.help_text %}
-                    <p class="help">{{ field.help_text|safe }}</p>
-                    {% endif %}
-                </div>
-            {% endfor %}
-        </div>
-        <div class="col">
-            <button type="submit" class="btn btn-primary">Регистрация</button>
-        </div>
-    </form>
+                    <div class="p-1">
+                        {% if field.help_text %}
+                        <p class="help">{{ field.help_text|safe }}</p>
+                        {% endif %}
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="col">
+                <button type="submit" class="btn btn-primary">Register</button>
+            </div>
+        </form>
+    </div>
+    <div class="col">
+        <h4>Already have an account? <a href="{% url 'login' %}">Login</a></h4>
+    </div>
 </div>
 
 {% endblock %}
