--- a/mysite/friends/templates/friends/user.html
+++ b/mysite/friends/templates/friends/user.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-3 p-2">
+    <div class="user-profile col-3 p-2 border border-2 rounded d-flex flex-column align-items-center">
         <img class="avatar" src="{{user.profile.avatar.url}}" alt="">
         <p>{{user.username}}</p>
         <p>Followers: {{followers}}</p>
@@ -16,7 +16,7 @@
     </div>
     <div class="col p-2">
         {% for post in posts %}
-            <div class="col p-1 m-1 border border-secondary rounded position-relative">
+            <div class="user-post col p-1 border border-secondary rounded position-relative">
                 <p class="lh-1">{{post.title}}</p>
                 <div class="d-flex flex-row">
                     <p >{{post.time_create}} ||</p>
