--- a/mysite/friends/templates/friends/base.html
+++ b/mysite/friends/templates/friends/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Fascinate&family=Fredoka+One&family=Gruppo&family=Patrick+Hand&family=Permanent+Marker&family=Yrsa:wght@300&display=swap" rel="stylesheet">
     <link type="text/css" href="{% static 'friends/css/style.css' %}" rel="stylesheet" />
+    <link rel="shortcut icon" href="{% static 'friends/images/favicon.ico' %}">
     <script src="https://kit.fontawesome.com/772d1ac053.js" crossorigin="anonymous"></script>
     <title>Friends</title>
 </head>
@@ -19,23 +20,22 @@
             </div>
             {% if weather %}
             <div class="col p-2 d-flex align-items-center justify-content-center">
-                <p class="text-center fw-bold" style="margin:0px">{{weather.city}} {{weather.main.temp|floatformat}}°C</p>
+                <p class="weather-info text-center fw-bold" style="margin:0px">{{weather.city}} - {{weather.main.temp|floatformat}}°C</p>
             </div>
             {% endif %}
-            <div class="col">
+            <div class="col align-self-center">
                 {% if request.user.is_authenticated %}
-                    <div class="row">
-                        <div class="col p-3 d-flex justify-content-end">
+                        <div class="col p-2 d-flex justify-content-end align-items-center">
+                            <img class="rounded-circle" style="width: 40px; margin-right: 10px; background-color: white;" src="{{request.user.profile.avatar.url}}" alt="">
                             <ul class="nav">
                                 <li class="nav-item p-1">
-                                    <a class="btn btn-primary btn-sm" href="/{{request.user.pk}}">{{request.user.username}}</a>
+                                    <a class="nav-btn btn btn-light btn-sm" href="/{{request.user.pk}}">{{request.user.username}}</a>
                                 </li>
                                 <li class="nav-item p-1">
-                                    <a class="btn btn-primary btn-sm" href="{% url 'logout' %}">Logout</a>
+                                    <a class="nav-btn btn btn-light btn-sm" href="{% url 'logout' %}">Logout</a>
                                 </li>
                             </ul>
                         </div>
-                    </div>
                 {% else %}
                 <div class="row">
                     <div class="col p-2">
@@ -68,7 +68,7 @@
                                     {{form.text}}
                                 </div>
                                 <div class="p-2 d-grid gap-2 d-md-flex justify-content-md-end">
-                                    <button type="submit" class="btn btn-primary">Post</button>
+                                    <button type="submit" class="btn btn-light btn-yellow">Post</button>
                                 </div>
                             </form>
                         </div>
