--- a/mysite/friends/templates/friends/base_logout.html
+++ b/mysite/friends/templates/friends/base_logout.html
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link type="text/css" href="{% static 'friends/css/style.css' %}" rel="stylesheet" />
-    <title>ВСети</title>
+    <title>Friends</title>
 </head>
 <body>
     <div class="container">
-        <div class="col-8">
-            <div class="col">
-                <h1><a href="/">Friends</a></h1>
+        <div class="header row">
+            <div style="background-color: inherit;" class="col p-2">
+                <h1><a class="site-title text-decoration-none" href="/">Friends</a></h1>
             </div>
-            <div class="col">
-                {% block content %}
-                {% endblock %}
-            </div>
+        </div>
+        <div class="col" style="margin-top: 20px;">
+            {% block content %}
+            {% endblock %}
         </div>
     </div>
 </body>
