--- a/mysite/friends/templates/friends/followers.html
+++ b/mysite/friends/templates/friends/followers.html
@@ -2,10 +2,16 @@
 
 {% block content %}
 <div class="d-flex flex-wrap">
-    {% for follower in followers %}
-        <div class="p-3">
-            <a href="{% url 'profile' id=follower.pk %}" class="text-decoration-none text-reset">
-                {{follower.username}}</a>
+    {% for user in followers %}
+        <div class="p-2 m-1 border border-secondary rounded">
+            <a href="{% url 'profile' id=user.pk %}" class="text-decoration-none text-reset">
+                <img class="avatar" src="{{user.profile.avatar.url}}" alt="">
+                <p class="text-center lh-1">{{user.username}}</p>
+                <form action="{% url 'del_follower' user_id=user.id%}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-primary btn-sm">Delete</button>
+                </form>
+            </a>
         </div>
     {% endfor %}
 </div>
