--- a/mysite/friends/templates/friends/all_users.html
+++ b/mysite/friends/templates/friends/all_users.html
@@ -1,6 +1,26 @@
 {% extends 'friends/base.html' %}
 
 {% block content %}
+<div class="search form" style="margin-top: 10px;">
+    <form action="" method="post">
+        {% csrf_token %}
+        <div class="d-flex align-items-center">
+            <div class="col-2 d-flex justify-content-center m-1">
+                <p style="margin:0px; font-weight: bold;">Search user</p>
+            </div>
+            <div class="col-3 d-flex justify-content-center m-1">
+                {{form.name}}
+            </div>
+            <div class="col-4 d-flex justify-content-evenly m-1">
+                <button class="btn btn-light btn-yellow" type="submit">Search</button>
+                <a class="btn btn-light btn-yellow" href="{% url 'all_users' %}">Clear</a>
+            </div>
+        </div>
+    </form>
+</div>
+<div>
+    <p class="m-2">Users found: {{users.count}}</p>
+</div>
 <div class="d-flex flex-wrap">
     {% for user in users %}
         <div class="p-2 m-1 border border-secondary rounded d-flex flex-column align-items-center">
