--- a/mysite/friends/templates/friends/base.html
+++ b/mysite/friends/templates/friends/base.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="main-page row">
-            <div class="col-8">
+            <div class="col-10">
                 <div class="row" style="min-height: 700px;">
                     <div class="left-menu col-3">
                         {% for m in menu %}
@@ -74,10 +74,26 @@
                         </div>
                         {% for post in user_posts%}
                         <div class="col p-1 m-1 border border-secondary rounded position-relative">
-                            <p>{{post.title}}</p>
-                            <div class="d-flex flex-row">
-                                <p style="margin: 0px">{{post.user}} || {{post.time_create}}</p>
-                                <div class="d-flex flex-row position-absolute bottom-0 end-0">
+                            <div class="d-flex flex-row m-1" style="height: 30px;">
+                                <a href="{% url 'profile' id=post.user.pk %}" class="text-decoration-none" style="margin-right: 10px;">
+                                    <img class="rounded-circle" style="width: 30px; margin: 0 3px 0 0; background-color: white;" src="{{post.user.profile.avatar.url}}" alt="">
+                                    <p class="username-link">{{post.user}}</p>
+                                </a>
+                                <p class="post-date text-muted">{{post.time_create}}</p>
+                                {% if post.user.pk == request.user.pk %}
+                                <form action="{% url 'delete_post' post_id=post.pk %}" method="post">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-link position-absolute top-0 end-0 p-1">
+                                        <span class="delete-post-icon">
+                                            <i class="fa-solid fa-x"></i>
+                                        </span>
+                                    </button>
+                                </form>
+                                {% endif %}
+                            </div>
+                            <div class="d-flex flex-row" style="width: 600px;">
+                                <p class="m-1 text-break" style="text-align: justify;">{{post.title}}</p>
+                                <div class="d-flex flex-row position-absolute bottom-0 end-0 align-items-center" style="margin-right: 5px;">
                                     {% if post.pk in user_likes%}
                                     <form action="{% url 'unlike_post' post_id=post.pk%}" method="post">
                                     {% csrf_token %}
