--- a/mysite/friends/templates/friends/user.html
+++ b/mysite/friends/templates/friends/user.html
@@ -16,22 +16,46 @@
     </div>
     <div class="col p-2">
         {% for post in posts %}
-            <div class="user-post col p-1 border border-secondary rounded position-relative">
-                <p class="lh-1">{{post.title}}</p>
-                <div class="d-flex flex-row">
-                    <p >{{post.time_create}} ||</p>
-                    <p style="margin:0 6px 0 6px">{{post.likes.count}}</p>
-                    {% if user.pk == request.user.pk %}
-                    <form action="{% url 'delete_post' post_id=post.pk %}" method="post">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-link position-absolute top-0 end-0 p-1">
+        <div class="col p-1 m-1 border border-secondary rounded position-relative">
+            <div class="d-flex flex-row m-1" style="height: 30px;">
+                <a href="{% url 'profile' id=post.user.pk %}" class="text-decoration-none" style="margin-right: 10px;">
+                    <img class="rounded-circle" style="width: 30px; margin: 0 3px 0 0; background-color: white;" src="{{post.user.profile.avatar.url}}" alt="">
+                    <p class="username-link">{{post.user}}</p>
+                </a>
+                <p class="post-date text-muted">{{post.time_create}}</p>
+                {% if user.pk == request.user.pk %}
+                <form action="{% url 'delete_post' post_id=post.pk %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-link position-absolute top-0 end-0 p-1">
+                        <span class="delete-post-icon">
                             <i class="fa-solid fa-x"></i>
+                        </span>
+                    </button>
+                </form>
+                {% endif %}
+            </div>
+            <div class="d-flex flex-row" style="width: 450px;">
+                <p class="m-1 text-break" style="text-align: justify;">{{post.title}}</p>
+                <div class="d-flex flex-row position-absolute bottom-0 end-0 align-items-center" style="margin-right: 5px;">
+                    {% if post.pk in user_likes%}
+                    <form action="{% url 'unlike_post' post_id=post.pk%}" method="post">
+                    {% csrf_token %}
+                        <button type="submit" class="btn btn-link p-0">
+                            <span style="color:red"><i class="fa-solid fa-heart"></i></span>
+                        </button>
+                    </form>
+                    {% else %}
+                    <form action="{% url 'like_post' post_id=post.pk%}" method="post">
+                    {% csrf_token %}
+                        <button type="submit" class="btn btn-link p-0">
+                            <span style="color:black"><i class="fa-regular fa-heart"></i></span>
                         </button>
                     </form>
                     {% endif %}
+                    <div class="">{{post.likes.count}}</div>
                 </div>
-                
             </div>
+        </div>
         {% endfor %}
     </div>
 </div>
