--- a/mysite/friends/templates/friends/base.html
+++ b/mysite/friends/templates/friends/base.html
@@ -29,10 +29,10 @@
                             <img class="rounded-circle" style="width: 40px; margin-right: 10px; background-color: white;" src="{{request.user.profile.avatar.url}}" alt="">
                             <ul class="nav">
                                 <li class="nav-item p-1">
-                                    <a class="nav-btn btn btn-light btn-sm" href="/{{request.user.pk}}">{{request.user.username}}</a>
+                                    <a class="nav-btn btn btn-sm" href="/{{request.user.pk}}">{{request.user.username}}</a>
                                 </li>
                                 <li class="nav-item p-1">
-                                    <a class="nav-btn btn btn-light btn-sm" href="{% url 'logout' %}">Logout</a>
+                                    <a class="nav-btn btn btn-sm" href="{% url 'logout' %}">Logout</a>
                                 </li>
                             </ul>
                         </div>
@@ -41,10 +41,10 @@
                     <div class="col p-2">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a class="btn btn-primary btn-sm" href="{% url 'login' %}">Login</a>
+                                <a class="btn btn-sm" href="{% url 'login' %}">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary btn-sm" href="{% url 'register' %}">Registration</a>
+                                <a class="btn btn-sm" href="{% url 'register' %}">Registration</a>
                             </li>
                         </ul>
                     </div>
@@ -91,7 +91,7 @@
                                 </form>
                                 {% endif %}
                             </div>
-                            <div class="d-flex flex-row" style="width: 600px;">
+                            <div class="d-flex flex-row" style="width: 90%;">
                                 <p class="m-1 text-break" style="text-align: justify;">{{post.title}}</p>
                                 <div class="d-flex flex-row position-absolute bottom-0 end-0 align-items-center" style="margin-right: 5px;">
                                     {% if post.pk in user_likes%}
