--- a/mysite/friends/templates/friends/user.html
+++ b/mysite/friends/templates/friends/user.html
@@ -8,10 +8,12 @@
         <p>Followers: {{followers}}</p>
         {% if user.pk != request.user.pk %}
             {% if user.username != request.user.username and not is_follow%}
-                <a class="btn btn-primary btn-sm" href="{% url 'follow' user_id=user.id%}">Follow</a>
+                <a class="btn btn-white btn-yellow btn-sm" href="{% url 'follow' user_id=user.id %}">Follow</a>
             {% else %}
-                <a class="btn btn-primary btn-sm" href="{% url 'unfollow' user_id=user.id%}">Unfollow</a>
+                <a class="btn btn-white btn-red btn-sm" href="{% url 'unfollow' user_id=user.id %}">Unfollow</a>
             {% endif %}
+        {% else %}
+            <a class="btn btn-white btn-yellow btn-sm" href="{% url 'edit_profile' id=user.pk %}">Edit profile</a>
         {% endif %}
     </div>
     <div class="col p-2">
@@ -34,7 +36,7 @@
                 </form>
                 {% endif %}
             </div>
-            <div class="d-flex flex-row" style="width: 450px;">
+            <div class="d-flex flex-row" style="width: 90%;">
                 <p class="m-1 text-break" style="text-align: justify;">{{post.title}}</p>
                 <div class="d-flex flex-row position-absolute bottom-0 end-0 align-items-center" style="margin-right: 5px;">
                     {% if post.pk in user_likes%}
